# zedi-gen

./: .gitignore  .windsurfrules  Cargo.toml  Dockerfile  README.md  prompt.md
benches/: benchmarks.rs
data/: first_names.csv
docs/: benchmarks.md  spec.md
examples/: config.toml
src/: anomalies.rs  claims.rs  cli.rs  config.rs  conformance.rs  errors.rs  generator.rs  lib.rs  main.rs  population.rs
src/x12/: envelope.rs  mod.rs  segments.rs
